huge update.... sorry for that