@@ -7,18 +7,22 @@ import android.graphics.BitmapFactory;
 import android.util.Base64;
 import android.util.Log;
 
-import org.json.JSONArray;
-import org.json.JSONException;
-
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
+import java.net.URLEncoder;
+import java.util.ArrayList;
+import java.util.List;
 
 import ru.spbau.mit.antonpp.deepshot.Constants;
 
@@ -47,62 +51,23 @@ public class Util {
         return BitmapFactory.decodeByteArray(bytes, 0, bytes.length);
     }
 
-    public static JSONArray getJSONFromUrl(String url) {
-        JSONArray jsonArray = null;
+    public static String getJSONStringFromUrl(String url) {
         HttpURLConnection httpURLConnection = null;
         String jsonString = null;
 
         try {
-            URL u = new URL(url);
+            final URL u = new URL(url);
             httpURLConnection = (HttpURLConnection) u.openConnection();
             httpURLConnection.setRequestMethod("GET");
-            BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(httpURLConnection.getInputStream()));
-            StringBuilder stringBuilder = new StringBuilder();
-
-            String line;
-            while ((line = bufferedReader.readLine()) != null) {
-                stringBuilder.append(line).append('\n');
-            }
-            jsonString = stringBuilder.toString();
+            jsonString = getResponse(httpURLConnection);
         } catch (IOException e) {
-            e.printStackTrace();
+            Log.e(TAG, e.getMessage());
         } finally {
             if (httpURLConnection != null) {
                 httpURLConnection.disconnect();
             }
         }
-
-        try {
-            jsonArray = new JSONArray(jsonString);
-        } catch (JSONException e) {
-            e.printStackTrace();
-        }
-
-        return jsonArray;
-    }
-
-    public static String getFilterUri(Context context, String filterName) {
-        final SharedPreferences sp = context.getSharedPreferences(Constants.PREFERENCES, Context.MODE_PRIVATE);
-        return sp.getString(filterName, null);
-    }
-
-    public static void saveFilterUri(Context context, String filterName, String uri) {
-        final SharedPreferences sp = context.getSharedPreferences(Constants.PREFERENCES, Context.MODE_PRIVATE);
-        sp.edit().putString(filterName, uri).apply();
-    }
-
-    public static String saveImage(Context context, String filterName, String encodedImage) {
-        String filename = filterName + ".jpg";
-        FileOutputStream outputStream;
-
-        try {
-            outputStream = context.openFileOutput(filename, Context.MODE_PRIVATE);
-            outputStream.write(Base64.decode(encodedImage, 0));
-            outputStream.close();
-        } catch (Exception e) {
-            Log.e(TAG, e.getMessage());
-        }
-        return "file://" + context.getFilesDir().getPath() + File.separator + filename;
+        return jsonString;
     }
 
     public static String getResponse(HttpURLConnection httpURLConnection) {
@@ -125,10 +90,132 @@ public class Util {
                 Log.e(TAG, ex.getMessage());
             }
         }
+        Log.d("RESPONSE", stringBuilder.toString());
         return stringBuilder.toString();
     }
 
+    public static String getImageUri(Context context, ImageType type, long id) {
+        final SharedPreferences sp = context.getSharedPreferences(Constants.PREFERENCES, Context.MODE_PRIVATE);
+        return sp.getString(createFilename(type, id), null);
+    }
+
+    public static void saveImageUri(Context context, ImageType type, long id, String uri) {
+        final SharedPreferences sp = context.getSharedPreferences(Constants.PREFERENCES, Context.MODE_PRIVATE);
+        sp.edit().putString(createFilename(type, id), uri).apply();
+    }
+
+    public static String createFilename(ImageType type, long id) {
+        return String.format("%s%d.jpg", type, id);
+    }
+
+    public static String saveImage(ImageType type, Context context, long id, String encodedImage) {
+        String filename = createFilename(type, id);
+        FileOutputStream outputStream;
+
+        try {
+            outputStream = context.openFileOutput(filename, Context.MODE_PRIVATE);
+            outputStream.write(Base64.decode(encodedImage, 0));
+            outputStream.close();
+        } catch (Exception e) {
+            Log.e(TAG, e.getMessage());
+        }
+        return "file://" + context.getFilesDir().getPath() + File.separator + filename;
+    }
+
     public static boolean checkUriValid(String uri) {
-        return uri != null && new File(URI.create(uri).getPath()).exists();
+        try {
+            return uri != null && new File(URI.create(uri).getPath()).exists();
+        } catch (IllegalArgumentException e) {
+            return false;
+        }
+    }
+
+    private static String sendPOST(String url, List<NameValuePair> params) {
+        HttpURLConnection httpURLConnection = null;
+        String result = null;
+
+        try {
+            final URL u = new URL(url);
+            httpURLConnection = (HttpURLConnection) u.openConnection();
+            httpURLConnection.setReadTimeout(10000);
+            httpURLConnection.setConnectTimeout(15000);
+            httpURLConnection.setRequestMethod("POST");
+            httpURLConnection.setDoInput(true);
+            httpURLConnection.setDoOutput(true);
+
+            final OutputStream os = httpURLConnection.getOutputStream();
+            final BufferedWriter writer = new BufferedWriter(
+                    new OutputStreamWriter(os, "UTF-8"));
+            writer.write(getQuery(params));
+            writer.flush();
+            writer.close();
+            os.close();
+
+            result = getResponse(httpURLConnection);
+        } catch (IOException e) {
+            Log.e(TAG, e.getMessage());
+        } finally {
+            if (httpURLConnection != null) {
+                httpURLConnection.disconnect();
+            }
+        }
+
+        return result;
+    }
+
+    public static void sendImage(String username, String encodedImage, long styleId) {
+        List<NameValuePair> params = new ArrayList<>();
+        addParam(params, "username", username);
+        addParam(params, "encodedImage", encodedImage);
+        addParam(params, "styleId", styleId);
+        sendPOST(Constants.URL_POST_IMAGE, params);
+    }
+
+    private static void addParam(List<NameValuePair> params, String key, Object value) {
+        if (value != null) {
+            params.add(new NameValuePair(key, value.toString()));
+        }
+    }
+
+    private static String getQuery(List<NameValuePair> params) throws UnsupportedEncodingException {
+        final StringBuilder result = new StringBuilder();
+        boolean first = true;
+
+        for (NameValuePair pair : params) {
+            if (first) {
+                first = false;
+            } else {
+                result.append("&");
+            }
+
+            result.append(URLEncoder.encode(pair.getName(), "UTF-8"));
+            result.append("=");
+            result.append(URLEncoder.encode(pair.getValue(), "UTF-8"));
+        }
+
+        return result.toString();
+    }
+
+    public enum ImageType {
+        RESULT, STYLE
+    }
+
+    private static class NameValuePair {
+        private final String name;
+        private final String value;
+
+        public NameValuePair(String name, String value) {
+
+            this.name = name;
+            this.value = value;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public String getValue() {
+            return value;
+        }
     }
 }
